# tamagotchi-battle

./: .gitignore  README.md
app/: Cargo.toml  README.md
app/io/: Cargo.toml
app/io/src/: lib.rs
app/src/: lib.rs
app/state/: Cargo.toml
battle/: .env  Cargo.toml  README.md  meta.txt
battle/io/: Cargo.toml
battle/io/src/: lib.rs
battle/script/: read.ts  register.ts  start_battle.ts  start_registration.ts
battle/src/: lib.rs
battle/state/: Cargo.toml
frontend/: .env  .gitignore  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/app/hocs/: index.tsx
frontend/src/app/hooks/: use-battle.ts  use-metadata.ts  use-send-message.ts
frontend/src/app/utils/: index.ts
frontend/src/assets/meta/: battle.meta.txt
frontend/src/components/common/gas-wallet/: gas-wallet.tsx
frontend/src/components/layout/header/account/: account.tsx
frontend/src/components/sections/battle-round-stats-avatar/: battle-round-stats-avatar.tsx
frontend/src/components/ui/icon/: icon.d.ts  icon.tsx
tamagotchi/: .env  .gitignore  Cargo.toml  Makefile  README.md  meta.txt
tamagotchi/.demo/: tmg.meta.txt  tmg.opt.wasm  tmg_state.meta.wasm
tamagotchi/io/: Cargo.toml
tamagotchi/io/src/: lib.rs
tamagotchi/script/: read.ts
tamagotchi/src/: lib.rs
tamagotchi/state/: Cargo.toml
tamagotchi/state/src/: lib.rs
