[package]
name = "app"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
app-io = { path = "io" }
gstd = { version = "1" }
gmeta = { version = "1" }
hashbrown = "0.13"

[build-dependencies]
app-io = { path = "io" }
gear-wasm-builder = { version = "1" }

[dev-dependencies]
gtest = { version = "1" }
gstd = { version = "1", features = ["debug"] }
tokio = "1"
gclient = { version = "1" }

[features]
# Used for inserting constants with WASM binaries (NOT paths) of the contract in
# the root crate. Usually these constants used in gclient tests instead of
# strings with paths to the binaries in the "target" directory. If you don't
# like this approach or don't use gclient tests, you can freely remove this
# feature from here and from the rest of the code.
binary-vendor = []
default = ["binary-vendor"]

# It's necessary to include all metawasm crates in the workspace section,
# otherwise they'll be ignored by Cargo and won't be built.
[workspace]
