[package]
name = "battle"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { version = "1",features = ["debug"] }
parity-scale-codec = { version = "3", default-features = false }
battle-io = { path = "io" }
tmg-io = { path = "../tamagotchi/io" }
scale-info = { version = "2", default-features = false }
hex-literal = "0.3.4"

[build-dependencies]
gear-wasm-builder = { version = "1" }
battle-io = { path = "io" }

[dev-dependencies]
gtest = { version = "1" }
gclient = { version = "1" }
tokio = "1"
hex = "0.4"

[workspace]
members = [
# "state",
]
