[package]
name = "battle-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] , branch = "master"}
parity-scale-codec = { version = "3", default-features = false }
gmeta = {  git = "https://github.com/gear-tech/gear.git", branch = "master" }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }