[package]
name = "battle-state"
version = "0.2.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "master" }
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "master", features = ["codegen"] }
battle-io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "master", features = ["metawasm"] }
