[package]
name = "battle-state"
version = "0.2.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "dn-revert-alloc-handling" }
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "dn-revert-alloc-handling", features = ["codegen"] }
battle-io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "dn-revert-alloc-handling", features = ["metawasm"] }
